# Mqtt-Modbus-Qt-Version

./: README.md  modbus_slave.py
CipMqttQt qmake/: mainwindow.cpp  mainwindow.h  mainwindow.ui  programtest234.pro  worker.cpp  worker.h
CipmodbusQt cmake/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
